--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".Interwencja"
+            android:exported="true"
+            android:label="@string/app_name" >
+
+        </activity>
+
+        <activity
+            android:name=".InterwencjaPomoc"
+            android:exported="true"
+            android:label="@string/app_name" >
+
+        </activity>
     </application>
 
 </manifest>
