--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,8 @@
         android:theme="@style/Theme.GWIZD"
         tools:targetApi="31" >
         <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name" >
+            android:name=".Login"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,17 +24,39 @@
 
         <activity
             android:name=".Interwencja"
-            android:exported="true"
-            android:label="@string/app_name" >
-
+            android:exported="true">
         </activity>
 
         <activity
             android:name=".InterwencjaPomoc"
-            android:exported="true"
-            android:label="@string/app_name" >
-
+            android:exported="true">
         </activity>
+
+        <activity
+            android:name=".Zgloszenie"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".Profil"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".Obserwacja"
+            android:exported="true">
+        </activity>
+        <activity
+            android:name=".Potwierdzenie"
+            android:exported="true">
+        </activity>
+
+
+
+
+
     </application>
 
 </manifest>
