--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,11 @@
             android:exported="true">
         </activity>
 
+        <activity
+            android:name=".Uwaga"
+            android:exported="true">
+        </activity>
+
 
 
 
